[project]
name = "ilc-provider"
version = "0.1.0"
description = "Faker provider for ILC data models"
readme = "README.md"
authors = [
    { name = "Neil Martin", email = "neil@fourtrees.tech" }
]
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "faker>=37.0.2",
    "ilc-models",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
ilc-models = { path = "../ilc-models", editable = true }
