[project]
name = "ilc-provider"
dynamic = ["version"]
description = "Faker provider for ILC data models"
readme = "README.md"
authors = [
    { name = "Neil Martin", email = "neil@fourtrees.tech" }
]
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "faker>=37.0.2",
    "ilc-models>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/ilc_provider/__init__.py"

[tool.mypy]
packages = ["ilc_provider"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-randomly>=3.16.0",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]
